--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -5,11 +5,11 @@
         <p><b>Error</b>: {{ message }}</p>
     {% endfor %}
     {% if current_user.is_authenticated %}
-        <h2>Hi, {{ current_user.nickname }}!</h2>
+        <h2>Hi, {{ current_user.name }}!</h2>
         <p><a href="{{ url_for('logout') }}">Logout</a></p>
     {% else %}
         <h2>I don't know you!</h2>
         <p><a href="{{ url_for('oauth_authorize', provider='facebook') }}">Login with Facebook</a></p>
-        <p><a href="{{ url_for('oauth_authorize', provider='twitter') }}">Login with Twitter</a></p>
+        <p><a href="{{ url_for('oauth_authorize', provider='google') }}">Login with Google</a></p>
     {% endif %}
 {% endblock %}
