--- a/mysite/templates/user/login.html
+++ b/mysite/templates/user/login.html
@@ -1,15 +1,12 @@
 {% extends "base.html" %}
-{% block content %}
-    <h1>OAuth Demo</h1>
-    {% for message in get_flashed_messages() %}
-        <p><b>Error</b>: {{ message }}</p>
-    {% endfor %}
+{% block mainpane %}
     {% if current_user.is_authenticated %}
         <h2>Hi, {{ current_user.name }}!</h2>
         <p><a href="{{ url_for('logout') }}">Logout</a></p>
     {% else %}
-        <h2>I don't know you!</h2>
+        <h2>Please Sign In</h2>
         <p><a href="{{ url_for('oauth_authorize', provider='facebook') }}">Login with Facebook</a></p>
         <p><a href="{{ url_for('oauth_authorize', provider='google') }}">Login with Google</a></p>
     {% endif %}
 {% endblock %}
+
